v3.9
-----
+ Added ability to hide games you already own

v3.8.1
-----
: Fixed a bug in pricing history currency localization - thanks directhex!
: Updated Russian translation

v3.8
-----
: Fixed a bug where bundle savings weren't calculating correctly in some currencies.  Thanks zr40!
: Updated Russian translation
+ Using new api.enhancedsteam.com web calls for external data, which is faster and more secure
+ Added a "Total size of all games" to your "All Games" tab.
+ Added search links to all app page categories which link to other games in the same category

v3.7
-----
: Changed "Total Spent" text to regular color (not red)
: Fixed a bug where background selection was showing on profile security page
+ Added "help" question mark next to options that links to the feature on enhancedsteam.com
: Changed changelog textarea to be readonly
: Changed "Enhanced Steam" dropdown to disappear if user clicks somewhere
+ Added "Library" support from the web.  This is an early "beta" feature - profile must be public!
+ Added option to remove the "About" link in the site header
+ Added link to trading card page from store pages of games that have trading cards
: Updated French translation

v3.6
-----
: Fixed a bug where custom profile backgrounds weren't saving properly in some instances
: Fixed a bug causing custom profile backgrounds not to show if not logged in
: Fixed a bug causing javascript errors when not logged in
: Fixed a bug where the "Empty Wishlist" button wasn't displaying properly for some languages
: Updated Japanese and Russian translations

v3.5
-----
+ Added ability to set custom background for all Enhanced Steam users visiting your profile
+ Added additional translation fields to the options page
: Updated Russian and Spanish translations

v3.4
-----
: Fixed a few bugs with coupon formatting
+ Added highlighting for Steam Trading Cards in the market
+ Added an experimental feature that shows market prices on inventory page (disabled by default)